fix(plate): 오늘의 기록을 시간순으로 프롬프트에 싣는다